st:add and style services section

--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,14 @@
 .about .a-title {
   font-size: 2vw;
 }
+.services {
+  background-image: url("/images/backgrounds/s_image.jpg");
+  height: 50vh;
+  background-size: cover;
+}
+.services p {
+  font-size: 1.3vw;
+}
+.services .bold {
+  font-size: 2.2vw;
+}
