--- a/css/style.css
+++ b/css/style.css
@@ -48,16 +48,35 @@
     font-size: 2.2vw;
 }
 
+.what-we-do {
+    padding: 1.4vw 1vw;
+    /* margin-bottom: 5vw; */
+}
+
 .what-we-do .row {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     width: 100%;
-    padding-left: 5vw;
+}
+
+.what-we-do .bold {
+    font-weight: bold;
+    font-size: 2vw;
+    padding: 2vw;
+}
+
+.card {
+    border: none;
 }
 
 .card img {
-    width: 20vw;
-    height: 25vw;
+    width: 6vw;
+    height: 8vw;
     object-fit: fill;
+}
+
+.card-body p {
+    font-size: 1.1vw;
+    height: 5vw;
 }
