feat:check for empty fields and add pop up message

--- a/css/style.css
+++ b/css/style.css
@@ -152,6 +152,15 @@ input {
     font-weight: bold;
 }
 
+.exampleModal {
+    display: none;
+}
+
+.fa-circle-check {
+    color: green;
+    font-size: 2vw;
+}
+
 .social .icons {
     width: 50vw;
     margin: 0 auto;
