--- a/css/style.css
+++ b/css/style.css
@@ -156,9 +156,20 @@ input {
     display: none;
 }
 
+.modal-header {
+    height: 2.2vw;
+}
+
 .fa-circle-check {
     color: green;
     font-size: 2vw;
+    display: none;
+}
+
+.fa-rectangle-xmark {
+    color: red;
+    font-size: 2vw;
+    display: none;
 }
 
 .social .icons {
