--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,11 @@
     display: none;
 }
 
+.img-opacity {
+    display: none;
+    opacity: 0.5;
+}
+
 .infor p {
     color: white;
     font-weight: 900;
@@ -173,6 +178,10 @@ input {
 
 .modal-header {
     height: 2.2vw;
+}
+
+#close {
+    background-color: #de984b !important;
 }
 
 .fa-circle-check {
