--- a/css/style.css
+++ b/css/style.css
@@ -205,3 +205,22 @@ input {
 .social .icons img {
     padding-left: 1.5vw;
 }
+
+@media (max-width: 540px) {
+    .wrapper {
+        height: 70vh;
+    }
+    .wrap-content img {
+        width: 15vw;
+    }
+    .wrap-content p {
+        color: white;
+        font-size: 5vw;
+    }
+    .wrap-content .w-caption {
+        font-size: 2.4vw;
+    }
+    .about .a-title {
+        font-size: 4vw;
+    }
+}
