--- a/css/style.css
+++ b/css/style.css
@@ -260,4 +260,35 @@ input {
         width: 95%;
         margin-bottom: 6vw;
     }
+    .contact-us {
+        justify-content: normal;
+    }
+    .form,
+    input {
+        width: 90%;
+        height: 10vw;
+    }
+    .contact-us .bold {
+        font-size: 4vw;
+        padding-top: 1vw;
+    }
+    .grp1 {
+        display: flex;
+        flex-direction: column;
+    }
+    .grp1 input {
+        width: 100%;
+    }
+    .form-group {
+        margin-top: 3vw;
+    }
+    #message {
+        height: 15vw;
+        color: white !important;
+    }
+    .submit {
+        width: 100%;
+        margin-top: 2vw;
+        height: 8vw;
+    }
 }
