--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ input {
     padding-left: 1.5vw;
 }
 
-@media (max-width: 540px) {
+@media (min-width: 375px) and (max-width: 912px) {
     .wrapper {
         height: 70vh;
     }
